--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     </main>
     <footer>
       <br>
-      <a href="https://twitter.com/IEEE_1394_">twitter</a> <a href="https://www.youtube.com/channel/UC6Z1t5k4d5UmrGAcVrDlUMw">youtube</a> <a href="contact.html">お問い合わせ</a><br>
+      <a href="https://twitter.com/IEEE_1394_">twitter</a> <a href="https://www.youtube.com/channel/UC6Z1t5k4d5UmrGAcVrDlUMw">youtube</a> <a href="https://github.com/IEEE-1394">github</a> <a href="contact.html">お問い合わせ</a><br>
       <small>Copyright &copy; 2020-2021 IEEE_1394_ All Rights Reserved.</small>
     </footer>
   </body>
