--- a/profile.html
+++ b/profile.html
@@ -28,16 +28,28 @@
     <main>
       <section class="hero">
         <div class="hero-body">
-          <p class="subtitle">
+          <p class="title">
             プロフィール
           </p>
-          <p></p>
+          <p class="subtitle">IEEE_1394_</p>
+          <p>こんばんわ、IEEE_1394_です。</p><br>
+          <p>ただ、パソコンが好きな中学2年生です。</p><br>
+            このwebページも、いろんな本、動画を見ながらつくりました。コードとかあまり覚えてないwww<br>
+          <p>マイクラが好きで、マイクラサーバー立てて遊んだり、webページ作ったりして遊んでます。</p><br>
+          <p>好きな事がホントにパソコンとゲームしかなくて、他にもう一つくらい欲しいなと思っています。</p><br>
+          <p>大きな更新は、twitterでお知らせしたいと思います。<br>ちょっとずつこのサイトも広げていきたいと思っているので、twitterのフォローもよろしくお願いします</p><br>
+          <p>↓リンクはこちらから↓</p>
+          <dl>
+            <dt><a href="https://github.com/IEEE-1394" class="button">github</a></dt>
+            <dt><a href="https://twitter.com/IEEE_1394_" class="button">twitter</a></p></dt>
+            <dt><a href="https://www.youtube.com/channel/UC6Z1t5k4d5UmrGAcVrDlUMw" class="button">youtube</a></p></dt>
+          </dl>
         </div>
       </section>
     </main>
     <footer>
       <br>
-      <a href="https://twitter.com/IEEE_1394_">twitter</a> <a href="https://www.youtube.com/channel/UC6Z1t5k4d5UmrGAcVrDlUMw">youtube</a> <a href="contact.html">お問い合わせ</a><br>
+      <a href="https://twitter.com/IEEE_1394_">twitter</a> <a href="https://www.youtube.com/channel/UC6Z1t5k4d5UmrGAcVrDlUMw">youtube</a> <a href="https://github.com/IEEE-1394">github</a> <a href="contact.html">お問い合わせ</a><br>
       <small>Copyright &copy; 2020-2021 IEEE_1394_ All Rights Reserved.</small>
     </footer>
   </body>
