--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <main>
       <p class="title">作成途中です</p>
       <p class="subtitle">ここまで半日でコードかきました。<br>こんなに早く終わったのは初めてです</p>
+      <p><a href="profile.html"class="button">プロフィールはこちら</a></p>
       <br>
       <p><a href="https://1.0p81.com" alt="見やすい旧サイトはこちらから(googleサイト)" class="button">見やすい旧サイトはこちらから(googleサイト)</a></p>
       <p class="page_top"><a href="#top" class="button is-small">ページトップ</a></p>
